feat: backport to 1.12.2