@@ -1,6 +1,6 @@
 package snownee.jade.addon.harvest;
 
-import java.util.List;
+import java.util.Collections;
 import java.util.Map;
 import java.util.Objects;
 import java.util.function.Consumer;
@@ -12,9 +12,9 @@ import com.google.common.base.Suppliers;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Maps;
 
-import net.minecraft.resources.Identifier;
-import net.minecraft.world.item.Items;
-import net.minecraft.world.level.block.Blocks;
+import net.minecraft.init.Blocks;
+import net.minecraft.init.Items;
+import net.minecraft.util.ResourceLocation;
 import snownee.jade.Jade;
 import snownee.jade.api.callback.CallbackContainer;
 import snownee.jade.api.harvest.ToolTier;
@@ -25,10 +25,10 @@ import snownee.jade.impl.WailaClientRegistration;
 
 public final class ToolTypeRegistryImpl implements ToolTypeRegistry {
 
-	private static ImmutableMap<Identifier, ToolType> TOOL_TYPES = ImmutableMap.of();
+	private static ImmutableMap<ResourceLocation, ToolType> TOOL_TYPES = ImmutableMap.of();
 	public static final Supplier<ToolTier> DEFAULT_SHEARS_TIER = Suppliers.memoize(() -> ToolTier.item(Items.SHEARS));
-	private final Map<Identifier, ToolType> pendingMap = Maps.newLinkedHashMap();
-	private final Map<Identifier, CallbackContainer<ToolTierAddedCallback>> pendingCallbacks = Maps.newHashMap();
+	private final Map<ResourceLocation, ToolType> pendingMap = Maps.newLinkedHashMap();
+	private final Map<ResourceLocation, CallbackContainer<ToolTierAddedCallback>> pendingCallbacks = Maps.newHashMap();
 
 	private ToolTypeRegistryImpl() {
 	}
@@ -36,7 +36,7 @@ public final class ToolTypeRegistryImpl implements ToolTypeRegistry {
 	@Override
 	public ToolType type(ToolType type) {
 		Objects.requireNonNull(type);
-		Identifier id = type.getUid();
+		ResourceLocation id = type.getUid();
 		Objects.requireNonNull(id);
 		if (pendingMap.containsKey(id)) {
 			Jade.LOGGER.warn("Skipped duplicate harvest tool type registration: {}", id);
@@ -53,22 +53,22 @@ public final class ToolTypeRegistryImpl implements ToolTypeRegistry {
 	}
 
 	@Override
-	public ToolType type(Identifier id) {
+	public ToolType type(ResourceLocation id) {
 		return type(id, true);
 	}
 
 	@Override
-	public ToolType type(Identifier id, boolean skipInstaBreakingBlock) {
+	public ToolType type(ResourceLocation id, boolean skipInstaBreakingBlock) {
 		return type(ToolType.of(id, skipInstaBreakingBlock));
 	}
 
 	@Override
-	public @Nullable ToolType get(Identifier typeId) {
+	public @Nullable ToolType get(ResourceLocation typeId) {
 		return pendingMap.get(typeId);
 	}
 
 	@Override
-	public void insertTierAfter(Identifier typeId, Identifier targetTier, ToolTier tier) {
+	public void insertTierAfter(ResourceLocation typeId, ResourceLocation targetTier, ToolTier tier) {
 		ToolType type = get(typeId);
 		if (type == null || !type.insertTierAfter(targetTier, tier)) {
 			CallbackContainer<ToolTierAddedCallback> callbacks = tierAddedCallback(typeId);
@@ -81,7 +81,7 @@ public final class ToolTypeRegistryImpl implements ToolTypeRegistry {
 	}
 
 	@Override
-	public void insertTierBefore(Identifier typeId, Identifier targetTier, ToolTier tier) {
+	public void insertTierBefore(ResourceLocation typeId, ResourceLocation targetTier, ToolTier tier) {
 		ToolType type = get(typeId);
 		if (type == null || !type.insertTierBefore(targetTier, tier)) {
 			CallbackContainer<ToolTierAddedCallback> callbacks = tierAddedCallback(typeId);
@@ -94,7 +94,7 @@ public final class ToolTypeRegistryImpl implements ToolTypeRegistry {
 	}
 
 	@Override
-	public CallbackContainer<ToolTierAddedCallback> tierAddedCallback(Identifier typeId) {
+	public CallbackContainer<ToolTierAddedCallback> tierAddedCallback(ResourceLocation typeId) {
 		ToolType type = get(typeId);
 		if (type != null) {
 			return type.tierAddedCallbacks();
@@ -107,7 +107,7 @@ public final class ToolTypeRegistryImpl implements ToolTypeRegistry {
 		return DEFAULT_SHEARS_TIER.get();
 	}
 
-	public static synchronized Map<Identifier, ? extends ToolType> registeredTypes() {
+	public static synchronized Map<ResourceLocation, ? extends ToolType> registeredTypes() {
 		return TOOL_TYPES;
 	}
 
@@ -126,7 +126,8 @@ public final class ToolTypeRegistryImpl implements ToolTypeRegistry {
 	}
 
 	public static synchronized void clear() {
-		DEFAULT_SHEARS_TIER.get().replaceExtraBlocks(List.of(Blocks.TRIPWIRE));
+		// 1.12.2: no List.of in the Java 8 runtime API.
+		DEFAULT_SHEARS_TIER.get().replaceExtraBlocks(Collections.singletonList(Blocks.TRIPWIRE));
 		TOOL_TYPES = ImmutableMap.of();
 	}
 }
