@@ -14,25 +14,25 @@ import com.google.common.cache.CacheBuilder;
 import com.google.common.collect.Lists;
 
 import net.minecraft.client.Minecraft;
-import net.minecraft.nbt.CompoundTag;
-import net.minecraft.network.RegistryFriendlyByteBuf;
-import net.minecraft.network.chat.Component;
-import net.minecraft.network.chat.MutableComponent;
-import net.minecraft.network.codec.StreamCodec;
-import net.minecraft.resources.Identifier;
-import net.minecraft.world.Container;
-import net.minecraft.world.LockCode;
-import net.minecraft.world.RandomizableContainer;
-import net.minecraft.world.entity.decoration.ArmorStand;
-import net.minecraft.world.entity.player.Player;
-import net.minecraft.world.entity.vehicle.ContainerEntity;
-import net.minecraft.world.inventory.PlayerEnderChestContainer;
-import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.level.block.entity.AbstractFurnaceBlockEntity;
-import net.minecraft.world.level.block.entity.BaseContainerBlockEntity;
-import net.minecraft.world.level.block.entity.EnderChestBlockEntity;
+import net.minecraft.entity.item.EntityArmorStand;
+import net.minecraft.entity.item.EntityMinecartContainer;
+import net.minecraft.entity.player.EntityPlayer;
+import net.minecraft.inventory.IInventory;
+import net.minecraft.inventory.InventoryEnderChest;
+import net.minecraft.item.ItemStack;
+import net.minecraft.nbt.NBTTagCompound;
+import net.minecraft.network.PacketBuffer;
+import net.minecraft.tileentity.TileEntityEnderChest;
+import net.minecraft.tileentity.TileEntityFurnace;
+import net.minecraft.tileentity.TileEntityLockable;
+import net.minecraft.tileentity.TileEntityLockableLoot;
+import net.minecraft.util.ResourceLocation;
+import net.minecraft.util.text.ITextComponent;
+import net.minecraft.util.text.TextComponentString;
+import net.minecraft.util.text.TextComponentTranslation;
 import snownee.jade.api.Accessor;
 import snownee.jade.api.BlockAccessor;
+import snownee.jade.api.DataCodec;
 import snownee.jade.api.EntityAccessor;
 import snownee.jade.api.IComponentProvider;
 import snownee.jade.api.IServerDataProvider;
@@ -59,14 +59,20 @@ import snownee.jade.util.WailaExceptionHandler;
 
 public class ItemStorageProvider<T extends Accessor<?>> implements IServerDataProvider<T> {
 
-	public static final Cache<Object, ItemCollector<?>> targetCache = CacheBuilder.newBuilder().weakKeys().expireAfterAccess(
-			60,
-			TimeUnit.SECONDS).build();
-	public static final Cache<Object, ItemCollector<?>> containerCache = CacheBuilder.newBuilder().weakKeys().expireAfterAccess(
-			120,
-			TimeUnit.SECONDS).build();
-	private static final StreamCodec<RegistryFriendlyByteBuf, Map.Entry<Identifier, List<ViewGroup<ItemStack>>>> STREAM_CODEC = ViewGroup.listCodec(
-			ItemStack.OPTIONAL_STREAM_CODEC);
+	public static final Cache<Object, ItemCollector<?>> targetCache = CacheBuilder.newBuilder().weakKeys().expireAfterAccess(60, TimeUnit.SECONDS).build();
+	public static final Cache<Object, ItemCollector<?>> containerCache = CacheBuilder.newBuilder().weakKeys().expireAfterAccess(120, TimeUnit.SECONDS).build();
+	private static final DataCodec<ItemStack> ITEM_STACK_CODEC = new DataCodec<>() {
+		@Override
+		public ItemStack decode(PacketBuffer buf) {
+			return DataCodec.readStack(buf);
+		}
+
+		@Override
+		public void encode(PacketBuffer buf, ItemStack value) {
+			buf.writeItemStack(value);
+		}
+	};
+	private static final DataCodec<Map.Entry<ResourceLocation, List<ViewGroup<ItemStack>>>> STREAM_CODEC = ViewGroup.listCodec(ITEM_STACK_CODEC);
 
 	public static final ItemStorageProvider<BlockAccessor> BLOCK = new ItemStorageProvider<>();
 	public static final ItemStorageProvider<EntityAccessor> ENTITY = new ItemStorageProvider<>();
@@ -77,18 +83,18 @@ public class ItemStorageProvider<T extends Accessor<?>> implements IServerDataPr
 
 		@Override
 		public void appendTooltip(ITooltip tooltip, T accessor, IPluginConfig config) {
-			if (accessor.getTarget() instanceof AbstractFurnaceBlockEntity) {
+			if (accessor.getTarget() instanceof TileEntityFurnace) {
 				return;
 			}
 			append(tooltip, accessor, config);
 		}
 
 		public static void append(ITooltip tooltip, Accessor<?> accessor, IPluginConfig config) {
-			if (!accessor.getServerData().contains(JadeIds.UNIVERSAL_ITEM_STORAGE.toString())) {
-				if (accessor.getServerData().getBooleanOr("Loot", false)) {
-					tooltip.add(Component.translatable("jade.loot_not_generated"));
-				} else if (accessor.getServerData().getBooleanOr("Locked", false)) {
-					tooltip.add(Component.translatable("jade.locked"));
+			if (!accessor.getServerData().hasKey(JadeIds.UNIVERSAL_ITEM_STORAGE.toString())) {
+				if (accessor.getServerData().getBoolean("Loot")) {
+					tooltip.add(new TextComponentTranslation("jade.loot_not_generated"));
+				} else if (accessor.getServerData().getBoolean("Locked")) {
+					tooltip.add(new TextComponentTranslation("jade.locked"));
 				}
 				return;
 			}
@@ -96,7 +102,7 @@ public class ItemStorageProvider<T extends Accessor<?>> implements IServerDataPr
 			List<ClientViewGroup<ItemView>> groups = ClientProxy.mapToClientGroups(
 					accessor,
 					JadeIds.UNIVERSAL_ITEM_STORAGE,
-					STREAM_CODEC,
+					ItemStorageProvider.STREAM_CODEC,
 					WailaClientRegistration.instance().itemStorageProviders::get,
 					tooltip);
 			if (groups == null || groups.isEmpty()) {
@@ -105,130 +111,121 @@ public class ItemStorageProvider<T extends Accessor<?>> implements IServerDataPr
 
 			MutableBoolean showName = new MutableBoolean(true);
 			MutableInt amountWidth = new MutableInt();
-			{
-				int showNameAmount = config.getInt(JadeIds.UNIVERSAL_ITEM_STORAGE_SHOW_NAME_AMOUNT);
-				int totalSize = 0;
-				for (var group : groups) {
-					for (var view : group.views) {
-						if (view.amountText != null) {
+			int totalSize = 0;
+			for (ClientViewGroup<ItemView> group : groups) {
+				for (ItemView view : group.views) {
+					if (view.amountText != null) {
+						showName.setFalse();
+					}
+					if (!view.item.isEmpty()) {
+						totalSize++;
+						if (totalSize == config.getInt(JadeIds.UNIVERSAL_ITEM_STORAGE_SHOW_NAME_AMOUNT)) {
 							showName.setFalse();
 						}
-						if (!view.item.isEmpty()) {
-							++totalSize;
-							if (totalSize == showNameAmount) {
-								showName.setFalse();
-							}
-						}
-						if (showName.isTrue()) {
-							String s = IDisplayHelper.get().humanReadableNumber(view.item.getCount(), "", false, null);
-							amountWidth.setValue(Math.max(amountWidth.intValue(), Minecraft.getInstance().font.width(s)));
-						}
+					}
+					if (showName.isTrue()) {
+						String s = IDisplayHelper.get().humanReadableNumber(view.item.getCount(), "", false, null);
+						amountWidth.setValue(Math.max(amountWidth.intValue(), Minecraft.getMinecraft().fontRenderer.getStringWidth(s)));
 					}
 				}
 			}
 
-			boolean renderGroup = groups.size() > 1 || groups.getFirst().shouldRenderGroup();
-			ClientViewGroup.tooltip(
-					tooltip, groups, renderGroup, (theTooltip, group) -> {
-						if (renderGroup) {
-							theTooltip.add(new HorizontalLineElement());
-							if (group.title != null) {
-								theTooltip.append(JadeUI.text(group.title).scale(0.5F));
-								theTooltip.append(new HorizontalLineElement().flexGrow(1));
-							}
+			boolean renderGroup = groups.size() > 1 || groups.get(0).shouldRenderGroup();
+			ClientViewGroup.tooltip(tooltip, groups, renderGroup, (theTooltip, group) -> {
+				if (renderGroup) {
+					theTooltip.add(new HorizontalLineElement());
+					if (group.title != null) {
+						theTooltip.append(JadeUI.text(group.title).scale(0.5F));
+						theTooltip.append(new HorizontalLineElement().flexGrow(1));
+					}
+				}
+				if (group.views.isEmpty() && group.extraData != null) {
+					float progress = group.extraData.hasKey("Collecting") ? group.extraData.getFloat("Collecting") : -1F;
+					if (progress >= 0 && progress < 1) {
+						ITextComponent component = new TextComponentTranslation("jade.collectingItems");
+						if (progress != 0) {
+							component.appendText(" " + (int) (progress * 100) + "%");
 						}
-						if (group.views.isEmpty() && group.extraData != null) {
-							float progress = group.extraData.getFloatOr("Collecting", -1F);
-							if (progress >= 0 && progress < 1) {
-								MutableComponent component = Component.translatable("jade.collectingItems");
-								if (progress != 0) {
-									component.append(" %s%%".formatted((int) (progress * 100)));
-								}
-								theTooltip.add(component);
-							}
-						}
-						int drawnCount = 0;
-						int realSize = config.getInt(accessor.showDetails() ?
-								JadeIds.UNIVERSAL_ITEM_STORAGE_DETAILED_AMOUNT :
-								JadeIds.UNIVERSAL_ITEM_STORAGE_NORMAL_AMOUNT);
-						realSize = Math.min(group.views.size(), realSize);
-						List<Element> elements = Lists.newArrayList();
-						for (int i = 0; i < realSize; i++) {
-							ItemView itemView = group.views.get(i);
-							ItemStack stack = itemView.item;
-							if (stack.isEmpty()) {
-								continue;
-							}
-							if (i > 0 && (
-									showName.isTrue() ||
-											drawnCount >= config.getInt(JadeIds.UNIVERSAL_ITEM_STORAGE_ITEMS_PER_LINE))) {
-								theTooltip.add(elements);
-								theTooltip.setLineMargin(-1, ScreenDirection.DOWN, 0);
-								elements.clear();
-								drawnCount = 0;
-							}
+						theTooltip.add(component);
+					}
+				}
+				int drawnCount = 0;
+				int realSize = config.getInt(accessor.showDetails() ? JadeIds.UNIVERSAL_ITEM_STORAGE_DETAILED_AMOUNT :
+						JadeIds.UNIVERSAL_ITEM_STORAGE_NORMAL_AMOUNT);
+				realSize = Math.min(group.views.size(), realSize);
+				List<Element> elements = Lists.newArrayList();
+				for (int i = 0; i < realSize; i++) {
+					ItemView itemView = group.views.get(i);
+					ItemStack stack = itemView.item;
+					if (stack.isEmpty()) {
+						continue;
+					}
+					if (i > 0 && (showName.isTrue() || drawnCount >= config.getInt(JadeIds.UNIVERSAL_ITEM_STORAGE_ITEMS_PER_LINE))) {
+						theTooltip.add(elements);
+						theTooltip.setLineMargin(-1, ScreenDirection.DOWN, 0);
+						elements.clear();
+						drawnCount = 0;
+					}
 
-							if (showName.isTrue()) {
-								if (itemView.description != null) {
-									elements.add(JadeUI.smallItem(stack));
-									elements.addAll(itemView.description);
-								} else {
-									elements.add(JadeUI.smallItem(stack).refreshNarration());
-									String s = IDisplayHelper.get().humanReadableNumber(stack.getCount(), "", false, null);
-									int width = Minecraft.getInstance().font.width(s);
-									if (width < amountWidth.intValue()) {
-										elements.add(JadeUI.spacer(amountWidth.intValue() - width, 0));
-									}
-									elements.add(JadeUI.text(Component.literal(s)
-											.append("× ")
-											.append(IDisplayHelper.get().stripColor(stack.getHoverName()))).narration(""));
-								}
-							} else if (itemView.amountText != null) {
-								elements.add(JadeUI.item(stack, 1, itemView.amountText));
-							} else {
-								elements.add(JadeUI.item(stack));
+					if (showName.isTrue()) {
+						if (itemView.description != null) {
+							elements.add(JadeUI.smallItem(stack));
+							elements.addAll(itemView.description);
+						} else {
+							elements.add(JadeUI.smallItem(stack).refreshNarration());
+							String s = IDisplayHelper.get().humanReadableNumber(stack.getCount(), "", false, null);
+							int width = Minecraft.getMinecraft().fontRenderer.getStringWidth(s);
+							if (width < amountWidth.intValue()) {
+								elements.add(JadeUI.spacer(amountWidth.intValue() - width, 0));
 							}
-							drawnCount += 1;
+							elements.add(JadeUI.text(new TextComponentString(s).appendText("× ")
+										.appendSibling(IDisplayHelper.get().stripColor(new TextComponentString(stack.getDisplayName())))).narration(""));
 						}
+					} else if (itemView.amountText != null) {
+						elements.add(JadeUI.item(stack, 1, itemView.amountText));
+					} else {
+						elements.add(JadeUI.item(stack));
+					}
+					drawnCount++;
+				}
 
-						if (!elements.isEmpty()) {
-							theTooltip.add(elements);
-						}
-					});
+				if (!elements.isEmpty()) {
+					theTooltip.add(elements);
+				}
+			});
 		}
 	}
 
 	public static void putData(Accessor<?> accessor) {
-		CompoundTag tag = accessor.getServerData();
+		NBTTagCompound tag = accessor.getServerData();
 		Object target = accessor.getTarget();
-		Player player = accessor.getPlayer();
-		Map.Entry<Identifier, List<ViewGroup<ItemStack>>> entry = CommonProxy.getServerExtensionData(
-				accessor,
-				WailaCommonRegistration.instance().itemStorageProviders);
+		EntityPlayer player = accessor.getPlayer();
+		Map.Entry<ResourceLocation, List<ViewGroup<ItemStack>>> entry = CommonProxy.getServerExtensionData(
+				accessor, WailaCommonRegistration.instance().itemStorageProviders);
 		if (entry != null) {
-			List<ViewGroup<ItemStack>> groups = entry.getValue();
-			for (ViewGroup<ItemStack> group : groups) {
+			for (ViewGroup<ItemStack> group : entry.getValue()) {
 				if (group.views.size() > ItemCollector.MAX_SIZE) {
 					group.views = group.views.subList(0, ItemCollector.MAX_SIZE);
 				}
 			}
-			tag.put(JadeIds.UNIVERSAL_ITEM_STORAGE.toString(), accessor.encodeAsNbt(STREAM_CODEC, entry));
+			tag.setTag(JadeIds.UNIVERSAL_ITEM_STORAGE.toString(), accessor.encodeAsNbt(STREAM_CODEC, entry));
 			return;
 		}
-		if (target instanceof RandomizableContainer containerEntity && containerEntity.getLootTable() != null) {
-			tag.putBoolean("Loot", true);
-		} else if (target instanceof ContainerEntity containerEntity && containerEntity.getContainerLootTable() != null) {
-			tag.putBoolean("Loot", true);
-		} else if (!player.isCreative() && !player.isSpectator() && target instanceof BaseContainerBlockEntity te) {
-			if (te.lockKey != LockCode.NO_LOCK) {
-				tag.putBoolean("Locked", true);
-			}
+		if (hasLootTable(target)) {
+			tag.setBoolean("Loot", true);
+		} else if (!player.isCreative() && !player.isSpectator() && target instanceof TileEntityLockable te && te.isLocked()) {
+			tag.setBoolean("Locked", true);
 		}
 	}
 
+	private static boolean hasLootTable(Object target) {
+		return target instanceof TileEntityLockableLoot container && container.getLootTable() != null ||
+				target instanceof EntityMinecartContainer minecart && minecart.getLootTable() != null;
+	}
+
 	@Override
-	public void appendServerData(CompoundTag tag, T accessor) {
-		if (accessor.getTarget() instanceof AbstractFurnaceBlockEntity) {
+	public void appendServerData(NBTTagCompound tag, T accessor) {
+		if (accessor.getTarget() instanceof TileEntityFurnace) {
 			return;
 		}
 		putData(accessor);
@@ -236,26 +233,22 @@ public class ItemStorageProvider<T extends Accessor<?>> implements IServerDataPr
 
 	@Override
 	public boolean shouldRequestData(T accessor) {
-		if (accessor.getTarget() instanceof AbstractFurnaceBlockEntity) {
+		if (accessor.getTarget() instanceof TileEntityFurnace) {
 			return false;
 		}
-		int amount;
-		if (accessor.showDetails()) {
-			amount = IWailaConfig.get().plugin().getInt(JadeIds.UNIVERSAL_ITEM_STORAGE_DETAILED_AMOUNT);
-		} else {
-			amount = IWailaConfig.get().plugin().getInt(JadeIds.UNIVERSAL_ITEM_STORAGE_NORMAL_AMOUNT);
-		}
+		int amount = accessor.showDetails() ? IWailaConfig.get().plugin().getInt(JadeIds.UNIVERSAL_ITEM_STORAGE_DETAILED_AMOUNT) :
+				IWailaConfig.get().plugin().getInt(JadeIds.UNIVERSAL_ITEM_STORAGE_NORMAL_AMOUNT);
 		if (amount == 0) {
 			return false;
 		}
 		if (IWailaConfig.get().plugin().get(JadeIds.UNIVERSAL_ITEM_STORAGE_SORT)) {
-			accessor.getServerData().putBoolean("SortItems", true);
+			accessor.getServerData().setBoolean("SortItems", true);
 		}
 		return WailaCommonRegistration.instance().itemStorageProviders.hitsAny(accessor, IServerExtensionProvider::shouldRequestData);
 	}
 
 	@Override
-	public Identifier getUid() {
+	public ResourceLocation getUid() {
 		return JadeIds.UNIVERSAL_ITEM_STORAGE;
 	}
 
@@ -268,7 +261,7 @@ public class ItemStorageProvider<T extends Accessor<?>> implements IServerDataPr
 		public static final Extension INSTANCE = new Extension();
 
 		@Override
-		public Identifier getUid() {
+		public ResourceLocation getUid() {
 			return JadeIds.UNIVERSAL_ITEM_STORAGE_DEFAULT;
 		}
 
@@ -279,26 +272,19 @@ public class ItemStorageProvider<T extends Accessor<?>> implements IServerDataPr
 			if (target == null) {
 				return CommonProxy.createItemCollector(accessor, containerCache).update(accessor);
 			}
-			if (target instanceof RandomizableContainer te && te.getLootTable() != null) {
+			if (hasLootTable(target)) {
 				return null;
 			}
-			if (target instanceof ContainerEntity containerEntity && containerEntity.getContainerLootTable() != null) {
+			if (target instanceof EntityArmorStand) {
 				return null;
 			}
-			if (target instanceof ArmorStand) {
+			EntityPlayer player = accessor.getPlayer();
+			if (!player.isCreative() && !player.isSpectator() && target instanceof TileEntityLockable te && te.isLocked()) {
 				return null;
 			}
-			Player player = accessor.getPlayer();
-			if (!player.isCreative() && !player.isSpectator() && target instanceof BaseContainerBlockEntity te) {
-				if (te.lockKey != LockCode.NO_LOCK) {
-					return null;
-				}
-			}
-			if (target instanceof EnderChestBlockEntity) {
-				PlayerEnderChestContainer inventory = player.getEnderChestInventory();
-				return new ItemCollector<>(new ItemIterator.ContainerItemIterator($ -> inventory, 0)).update(
-						accessor
-				);
+			if (target instanceof TileEntityEnderChest) {
+				InventoryEnderChest inventory = player.getInventoryEnderChest();
+				return new ItemCollector<>(new ItemIterator.ContainerItemIterator($ -> inventory, 0)).update(accessor);
 			}
 			ItemCollector<?> itemCollector;
 			try {
@@ -318,7 +304,7 @@ public class ItemStorageProvider<T extends Accessor<?>> implements IServerDataPr
 		@Override
 		public boolean shouldRequestData(Accessor<?> accessor) {
 			Object target = accessor.getTarget();
-			if (target instanceof EnderChestBlockEntity || target instanceof Container) {
+			if (target instanceof TileEntityEnderChest || target instanceof IInventory) {
 				return true;
 			}
 			return CommonProxy.hasDefaultItemStorage(accessor);
@@ -329,5 +315,4 @@ public class ItemStorageProvider<T extends Accessor<?>> implements IServerDataPr
 			return 9999;
 		}
 	}
-
 }
