@@ -1,10 +1,11 @@
 package snownee.jade.test;
 
+import java.util.Arrays;
 import java.util.List;
 
-import net.minecraft.network.chat.Component;
-import net.minecraft.resources.Identifier;
-import net.minecraft.world.level.Level;
+import net.minecraft.util.ResourceLocation;
+import net.minecraft.util.text.TextComponentString;
+import net.minecraft.world.World;
 import snownee.jade.api.Accessor;
 import snownee.jade.api.ui.MessageType;
 import snownee.jade.api.view.ClientViewGroup;
@@ -18,7 +19,7 @@ public enum ExampleEnergyStorageProvider
 	INSTANCE;
 
 	@Override
-	public Identifier getUid() {
+	public ResourceLocation getUid() {
 		return ExamplePlugin.UID_TEST_ENERGY;
 	}
 
@@ -26,7 +27,7 @@ public enum ExampleEnergyStorageProvider
 	public List<ClientViewGroup<EnergyView>> getClientGroups(Accessor<?> accessor, List<ViewGroup<EnergyView.Data>> groups) {
 		return ClientViewGroup.map(groups, data -> EnergyView.read(data, "RF"), (group, clientGroup) -> {
 			if (group.id != null) {
-				clientGroup.title = Component.literal(group.id);
+				clientGroup.title = new TextComponentString(group.id);
 				clientGroup.messageType = MessageType.DANGER;
 			} else {
 				clientGroup.messageType = MessageType.INFO;
@@ -36,14 +37,14 @@ public enum ExampleEnergyStorageProvider
 
 	@Override
 	public List<ViewGroup<EnergyView.Data>> getGroups(Accessor<?> accessor) {
-		Level world = accessor.getLevel();
+		World world = accessor.getLevel();
 		var cell1 = new ViewGroup<>(List.of(new EnergyView.Data(0, 2000)));
 		cell1.id = "1";
 		float period = 40;
-		cell1.setProgress(((world.getGameTime() % period) + 1) / period);
+		cell1.setProgress(((world.getWorldTime() % period) + 1) / period);
 		var cell2 = new ViewGroup<>(List.of(new EnergyView.Data(1500, 2000), new EnergyView.Data(2000, 2000)));
 		period = 100;
-		cell2.setProgress(((world.getGameTime() % period) + 1) / period);
-		return List.of(cell1, cell2);
+		cell2.setProgress(((world.getWorldTime() % period) + 1) / period);
+		return Arrays.asList(cell1, cell2);
 	}
 }
