@@ -1,13 +1,15 @@
 package snownee.jade.test;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
-import net.minecraft.network.chat.Component;
-import net.minecraft.resources.Identifier;
-import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.level.block.entity.BrewingStandBlockEntity;
+import net.minecraft.item.ItemStack;
+import net.minecraft.tileentity.TileEntityBrewingStand;
+import net.minecraft.util.ResourceLocation;
+import net.minecraft.util.text.TextComponentString;
 import snownee.jade.api.Accessor;
 import snownee.jade.api.ui.MessageType;
 import snownee.jade.api.view.ClientViewGroup;
@@ -20,7 +22,7 @@ public enum ExampleItemStorageProvider implements IServerExtensionProvider<ItemS
 	INSTANCE;
 
 	@Override
-	public Identifier getUid() {
+	public ResourceLocation getUid() {
 		return ExamplePlugin.UID_TEST_BREWING;
 	}
 
@@ -28,18 +30,18 @@ public enum ExampleItemStorageProvider implements IServerExtensionProvider<ItemS
 	public List<ClientViewGroup<ItemView>> getClientGroups(Accessor<?> accessor, List<ViewGroup<ItemStack>> groups) {
 		return ClientViewGroup.map(
 				groups, ItemView::new, (group, clientGroup) -> {
-					clientGroup.title = Component.literal(Objects.requireNonNull(group.id));
+					clientGroup.title = new TextComponentString(Objects.requireNonNull(group.id));
 					clientGroup.messageType = MessageType.WARNING;
 				});
 	}
 
 	@Override
 	public List<ViewGroup<ItemStack>> getGroups(Accessor<?> accessor) {
-		BrewingStandBlockEntity target = (BrewingStandBlockEntity) Objects.requireNonNull(accessor.getTarget());
-		var potions = new ViewGroup<>(IntStream.of(0, 1, 2).mapToObj(target::getItem).filter($ -> !$.isEmpty()).toList());
+		TileEntityBrewingStand target = (TileEntityBrewingStand) Objects.requireNonNull(accessor.getTarget());
+		var potions = new ViewGroup<>(IntStream.of(0, 1, 2).mapToObj(target::getStackInSlot).filter($ -> !$.isEmpty()).collect(Collectors.toList()));
 		potions.id = "Potions";
-		var ingredient = new ViewGroup<>(IntStream.of(3).mapToObj(target::getItem).filter($ -> !$.isEmpty()).toList());
+		var ingredient = new ViewGroup<>(IntStream.of(3).mapToObj(target::getStackInSlot).filter($ -> !$.isEmpty()).collect(Collectors.toList()));
 		ingredient.id = "Ingredient";
-		return List.of(ingredient, potions);
+		return Arrays.asList(ingredient, potions);
 	}
 }
